--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-  <h1>Continuous String Generator</h1>
+  <h1>Constrgen - Continuous String Generator</h1>
   <script src="popup.js"></script>
 </body>
 
